Begin implementing button to add new item to each list form

--- a/src/styles/ExpandButtonStyles.css
+++ b/src/styles/ExpandButtonStyles.css
@@ -11,7 +11,7 @@ button > svg {
     display: block;
     left: 0;
     top: 0;
-    min-width: 32px;
+    min-width: 2em;
     height: auto;
     flex-shrink: 0;
     transform: rotate(180deg);
