--- a/src/styles/ListFormStyles.css
+++ b/src/styles/ListFormStyles.css
@@ -12,3 +12,11 @@
     justify-content: space-between;
     align-items: center;
 }
+
+.add-button {
+    height: 3rem;
+    width: 8rem;
+    background-color: blue;
+    align-self: center;
+    border-radius: 5px;
+}
