--- a/src/App.css
+++ b/src/App.css
@@ -4,13 +4,29 @@ body {
 
 #root {
   max-width: 1280px;
+  height: 75vh;
   margin: 0 auto;
   padding: 2rem;
   text-align: center;
   display: grid;
-  grid-template-columns: (1fr, auto);
+  grid-template-columns: 1fr auto;
+  grid-template-rows: 1fr;
+  gap: 1.5rem;
 }
 
 .info-container {
   width: clamp(350px, 500px, 50vw);
+}
+
+.pdf-viewer {
+  width: clamp(350px, 500px, 50vw);
+  height: 100%;
+}
+
+.generate-pdf-button {
+    height: 3rem;
+    width: 8rem;
+    background-color: rgb(240, 240, 240);
+    align-self: center;
+    border-radius: 5px;
 }
